Changes to the properties of the app, allow user to choose not to write to DB